--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
        <link href="css/hr.css" rel="stylesheet" >
       <!-- nice figures  -->
 <!--      <link rel="stylesheet" href="css/font-awesome.css">-->
-<!--      <link rel="icon" type="image/jpg" href="images/egobody_logo1.jpg">-->
-       <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22></text></svg>">
+      <link rel="icon" type="image/png" href="images/logo.png">
+<!--       <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22></text></svg>"> -->
 
    </head>
    <body id="page-top">
