--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
          <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">EgoGen</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">EgoGen <img src="images/logo.png" style="vertical-align: -3px;" width="20"> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -65,7 +65,7 @@
 
       <header class="bg-light text-black">
           <div class="container text-center">
-              <h1><font color="#015FBD "><b>EgoGen </b></font></h1>
+              <h1><img src="images/logo.png" style="vertical-align: -7px;" width="70"> <font color="#015FBD "><b>EgoGen&nbsp&nbsp&nbsp&nbsp</b></font></h1>
               <h2><font color="#015FBD "><b>An Egocentric Synthetic Data Generator </b></font></h2><br><br>
               <div id="content">
           <div id="content-inner">
@@ -114,7 +114,6 @@
       </header>
 
 
-<!--      <hr class="hr-fade-content" data-content="&#129445">-->
 
 
 
