--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
       <header class="bg-light text-black">
           <div class="container text-center">
-              <h1><img src="images/logo.png" style="vertical-align: -7px;" width="70"> <font color="#015FBD "><b>EgoGen&nbsp&nbsp&nbsp&nbsp</b></font></h1>
+	      <h7><img src="images/logo.png" width="45"></h7>
+              <h1><font color="#015FBD "><b>EgoGen</b></font></h1>
               <h2><font color="#015FBD "><b>An Egocentric Synthetic Data Generator </b></font></h2><br><br>
               <div id="content">
           <div id="content-inner">
