--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
                    <h2>Applications</h2> <br>
                    <h3>Mapping and Localization for HMDs</h3>
                         
-                        <p class="lead text-justify">EgoGen has the capability to produce realistic synthetic egocentric data that closely matches real-world captures, with the real-world capture on the left and the EgoGen synthetic data on the right:</p>
-
+<!--
+                        <p class="lead text-justify">EgoGen has the capability to produce realistic synthetic egocentric data that closely matches real-world captures.</p>
                         <div style="display: flex; justify-content: center; gap:50px;">
 
         <div>
@@ -325,9 +325,8 @@
             <img src="images/egogen.gif" alt="EgoGen synthetic image data" height="300">
         </div>
 
-    </div>
-                    <br> 
-                    <p class="lead text-justify">We visualize some synthetic images and their extracted feature points with SuperPoint:</p>
+    </div>-->
+                    <p class="lead text-justify">EgoGen has the capability to produce realistic synthetic egocentric data that closely matches real-world captures. We visualize some synthetic images and their extracted feature points with SuperPoint:</p>
 
                     <div style="display: flex; justify-content: center; gap:10px;">
 
