--- a/index.html
+++ b/index.html
@@ -533,10 +533,18 @@
                </div>
             </div>
          </div>
-         <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5o632si51yl&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33&amp;s=188" async="async"></script>
       </section>
 
 
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+      <tr>
+        <td>
+        <br>
+        <script type="text/javascript" id="clustrmaps"
+        src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=100&t=n&d=b9qzrkuRsnqF9u7-lSZ3NxZ6AL7Q9Pj5t3SD5E2mObI"></script>
+        </td>
+      </tr>
+      </table>
 
 
       <!-- Footer -->
