--- a/index.html
+++ b/index.html
@@ -535,17 +535,7 @@
          </div>
       </section>
 
-
-        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-      <tr>
-        <td>
-        <br>
-        <script type="text/javascript" id="clustrmaps"
-        src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=100&t=n&d=b9qzrkuRsnqF9u7-lSZ3NxZ6AL7Q9Pj5t3SD5E2mObI"></script>
-        </td>
-      </tr>
-      </table>
-
+    <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5imi365mvaq&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async" width="200"></script>
 
       <!-- Footer -->
       <footer class="py-5 bg-dark">
