--- a/index.html
+++ b/index.html
@@ -535,7 +535,14 @@
          </div>
       </section>
 
-    <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5imi365mvaq&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async" width="200"></script>
+    <style>
+        #revolvermap {
+            width: 188px; /* Set the width to your desired value */
+            height: 188px; /* Set the height to your desired value */
+        }
+    </style>
+    <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5imi365mvaq&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
+
 
       <!-- Footer -->
       <footer class="py-5 bg-dark">
