--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
     }
   </style>
 
+<style>
+        #revolver-container {
+            width: 188px;
+            height: 188px;
+            overflow: hidden; /* Ensure the widget doesn't overflow the container */
+        }
+    </style>
 
    </head>
    <body id="page-top">
@@ -535,14 +542,9 @@
          </div>
       </section>
 
-    <style>
-        #revolvermap {
-            width: 188px; /* Set the width to your desired value */
-            height: 188px; /* Set the height to your desired value */
-        }
-    </style>
-    <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5imi365mvaq&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
-
+<div id="revolver-container">
+        <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5imi365mvaq&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
+    </div>
 
       <!-- Footer -->
       <footer class="py-5 bg-dark">
