--- a/index.html
+++ b/index.html
@@ -44,11 +44,20 @@
     }
   </style>
 
-<style>
+
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Ensure the body takes the full height of the viewport */
+            margin: 0; /* Remove default body margin */
+        }
+
         #revolver-container {
             width: 188px;
             height: 188px;
-            overflow: hidden; /* Ensure the widget doesn't overflow the container */
+            overflow: hidden;
         }
     </style>
 
