--- a/index.html
+++ b/index.html
@@ -45,22 +45,6 @@
   </style>
 
 
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Ensure the body takes the full height of the viewport */
-            margin: 0; /* Remove default body margin */
-        }
-
-        #revolver-container {
-            width: 188px;
-            height: 188px;
-            overflow: hidden;
-        }
-    </style>
-
    </head>
    <body id="page-top">
       <!-- Navigation -->
@@ -551,7 +535,7 @@
          </div>
       </section>
 
-<div id="revolver-container">
+<div class="container" width="188">
         <script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5imi365mvaq&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
     </div>
 
