--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                 <div class="downloads">
                     <br><h3>
-                    <a class="publink" href="" target="_blank" style="text-decoration: none"> Arxiv <i class="fa fa-print"></i></a> &nbsp;
+                    <a class="publink" href="https://arxiv.org/abs/2401.08739" target="_blank" style="text-decoration: none"> Arxiv <i class="fa fa-print"></i></a> &nbsp;
                     &nbsp;&nbsp;
                     <a class="publink" href="https://github.com/ligengen/EgoGen" target="_blank" style="text-decoration: none"> Code <i class="fa fa-github"></i></a>
                     <h3>
@@ -477,13 +477,16 @@
                     EgoGen: An Egocentric Synthetic Data Generator </b><br></a>
                     Gen Li, Kaifeng Zhao, Siwei Zhang, Xiaozhong Lyu, Mihai Dusmanu, Yan Zhang, Marc Pollefeys, Siyu Tang<br>
                   <br><br>
-<!--<pre style="display: block; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 4px">
-@inproceedings{zhang2023probabilistic,
-  title={Probabilistic Human Mesh Recovery in 3D Scenes from Egocentric Views},
-  author={Siwei Zhang, Qianli Ma, Yan Zhang, Sadegh Aliakbarian, Darren Cosker, Siyu Tang},
-  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
-  year={2023}
-}</pre>-->
+<pre style="display: block; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 4px">
+@misc{li2024egogen,
+      title={EgoGen: An Egocentric Synthetic Data Generator}, 
+      author={Gen Li and Kaifeng Zhao and Siwei Zhang and Xiaozhong Lyu and Mihai Dusmanu and Yan Zhang and Marc Pollefeys and Siyu Tang},
+      year={2024},
+      eprint={2401.08739},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+}</pre>
                </div>
             </div>
          </div>
