--- a/index.html
+++ b/index.html
@@ -479,14 +479,14 @@
                   <br><br>
 <pre style="display: block; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 4px">
 @misc{li2024egogen,
-      title={EgoGen: An Egocentric Synthetic Data Generator}, 
+      title={EgoGen: An Egocentric Synthetic Data Generator},
       author={Gen Li and Kaifeng Zhao and Siwei Zhang and Xiaozhong Lyu and Mihai Dusmanu and Yan Zhang and Marc Pollefeys and Siyu Tang},
       year={2024},
       eprint={2401.08739},
       archivePrefix={arXiv},
       primaryClass={cs.CV}
 }
-}</pre>
+</pre>
                </div>
             </div>
          </div>
