--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                <div class="col-lg-10 mx-auto">
                   <h2 class="section-title-tc">Citation</h2>
                   <br>
-                  <a class="publink" target="_blank" href=""><b>
+                  <a class="publink" target="_blank" href="https://arxiv.org/abs/2401.08739"><b>
                     EgoGen: An Egocentric Synthetic Data Generator </b><br></a>
                     Gen Li, Kaifeng Zhao, Siwei Zhang, Xiaozhong Lyu, Mihai Dusmanu, Yan Zhang, Marc Pollefeys, Siyu Tang<br>
                   <br><br>
