--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
 
                 <br>
-                <!-- <div class="venue"><h5>International Conference on Computer Vision (<a href="https://iccv2023.thecvf.com/" target="_blank">ICCV</a>) 2023 <font color="#B20234 "><b>(Oral) </b></font><h5></div> -->
+                <div class="venue"><h5>The IEEE/CVF Conference on Computer Vision and Pattern Recognition (<a href="https://cvpr.thecvf.com/Conferences/2024" target="_blank">CVPR</a>) 2024 <h5></div>
 
 
 
@@ -478,13 +478,11 @@
                     Gen Li, Kaifeng Zhao, Siwei Zhang, Xiaozhong Lyu, Mihai Dusmanu, Yan Zhang, Marc Pollefeys, Siyu Tang<br>
                   <br><br>
 <pre style="display: block; background-color: #f5f5f5; border: 1px solid #ccc; border-radius: 4px">
-@misc{li2024egogen,
-      title={EgoGen: An Egocentric Synthetic Data Generator},
-      author={Gen Li and Kaifeng Zhao and Siwei Zhang and Xiaozhong Lyu and Mihai Dusmanu and Yan Zhang and Marc Pollefeys and Siyu Tang},
-      year={2024},
-      eprint={2401.08739},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
+@article{li2024egogen,
+  title={EgoGen: An Egocentric Synthetic Data Generator},
+  author={Li, Gen and Zhao, Kaifeng and Zhang, Siwei and Lyu, Xiaozhong and Dusmanu, Mihai and Zhang, Yan and Pollefeys, Marc and Tang, Siyu},
+  journal={arXiv preprint arXiv:2401.08739},
+  year={2024}
 }
 </pre>
                </div>
