--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                 <br>
                 <div class="venue"><h5>The IEEE/CVF Conference on Computer Vision and Pattern Recognition (<a href="https://cvpr.thecvf.com/Conferences/2024" target="_blank">CVPR</a>) 2024 <h5></div>
-
+		<div class="venue"><h5> <font color="#EE0303 "><b>Oral Presentation </b></font> <h5></div>
 
 
                 <div class="downloads">
