--- a/index.html
+++ b/index.html
@@ -438,19 +438,15 @@
             <div class="row">
                <div class="col-lg-10 mx-auto">
                   <h2 class="section-title-tc">Video</h2>
-                  <!--<div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/K6m0BmfMG-E" title="Probabilistic Human Mesh Recovery in 3D Scenes from Egocentric Views" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  </div>-->
-                  <video width="960" controls>
-                    <source src="video/video.mp4" type="video/mp4">
-                    Your browser does not support HTML video.
-                  </video>
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/-WKQ4Vx2AXU?si=T5bcu9-3m-jisFMj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                  </div>
                </div>
             </div>
          </div>
       </section>
 
-
+				
       <!--<section id="downloads" class="">
          <div class="container">
             <div class="row">
