--- a/index.html
+++ b/index.html
@@ -160,10 +160,12 @@
             <div class="row">
                <div class="col-lg-10 mx-auto">
                      <!-- <p><img class="img-fluid" alt="teaser" src="https://via.placeholder.com/1500x600"></p> -->
-                     <p><img class="img-fluid" alt="teaser" src="images/teaser-final.png"></p>
+                     <img class="img-fluid" alt="teaser" src="images/teaser-final.png"></p>
                      <h5 class="img-wide text-center">
                         <font color="#6F6D6D " size="4">EgoGen: a scalable synthetic data generation system for egocentric perception tasks, with rich multi-modal data and accurate annotations. We simulate camera rigs for head-mounted devices (HMDs) and render from the perspective of the camera wearer with various sensors. Top to bottom: middle and right camera sensors in the rig. Left to right: photo-realistic RGB image, RGB with simulated motion blur, depth map, surface normal, segmentation mask, and world position for fisheye cameras widely used in HMDs. </font>
                         <h5>
+                  <br>
+		     <p><video width="100%" autoplay loop muted> <source src="video/teaser.mp4" type="video/mp4"/> </video>
                   <br>
                    <h2>Abstract</h2>
                    <div class="text-center">
