--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <div>
             <h6 style="text-align: center;">Moving Obstacle</h6>
-            <video width="160" height="270" controls>
+            <video width="160" height="270" controls autoplay loop muted playsinline>
                 <source src="video/moving.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -223,7 +223,7 @@
 
         <div>
             <h6 style="text-align: center;">Two People</h6>
-            <video width="160" height="270" controls>
+            <video width="160" height="270" controls autoplay loop muted playsinline>
                 <source src="video/2man.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -231,7 +231,7 @@
 
         <div>
             <h6 style="text-align: center;">More People</h6>
-            <video width="160" height="270" controls>
+            <video width="160" height="270" controls autoplay loop muted playsinline>
                 <source src="video/4man.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -239,7 +239,7 @@
 
         <div>
             <h6 style="text-align: center;">Even More People</h6>
-            <video width="292" height="270" controls>
+            <video width="292" height="270" controls autoplay loop muted playsinline>
                 <source src="video/8man.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -256,7 +256,7 @@
 
         <div>
             <h6 style="text-align: center;">PhysicsVAE [Won et al. 2022]</h6>
-            <video width="300" height="300" controls>
+            <video width="300" height="300" controls autoplay loop muted playsinline>
                 <source src="video/physicsvae.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -264,7 +264,7 @@
 
         <div>
             <h6 style="text-align: center;">Ours</h6>
-            <video width="300" height="300" controls>
+            <video width="300" height="300" controls autoplay loop muted playsinline>
                 <source src="video/diverse.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -383,14 +383,14 @@
                     <div style="display: flex; justify-content: space-between;">
 
         <div>
-            <video height="250" controls>
+            <video height="250" controls autoplay loop muted playsinline>
                 <source src="video/hmr1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
 
         <div>
-            <video height="250" controls>
+            <video height="250" controls autoplay loop muted playsinline>
                 <source src="video/hmr2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -413,14 +413,14 @@
                     <div style="display: flex; justify-content: space-between;">
 
         <div>
-            <video height="250" controls>
+            <video height="250" controls autoplay loop muted playsinline>
                 <source src="video/hmr3.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>     
                    
         <div>      
-            <video height="250" controls>
+            <video height="250" controls autoplay loop muted playsinline>
                 <source src="video/hmr4.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
